--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -275,10 +275,10 @@
 					
 					<!-- Contact Form
 					============================================= -->
-					<div>
+					<div class="col_half">
 
 						<div class="fancy-title title-dotted-border">
-							<h3>New Listing Email Alert System</h3>
+							<h3>Send New Listing Email Alert</h3>
 						</div>
 
 						<div class="form-widget">
@@ -311,7 +311,7 @@
 								<div class="clear"></div>
 
 								<div class="col_two_third">
-									<label for="template-contactform-subject">Security Code <small>*</small></label>
+									<label for="template-contactform-subject">Subject <small>*</small></label>
 									<input type="text" id="template-contactform-subject" name="subject" value=""
 										class="required sm-form-control" />
 								</div>
@@ -323,6 +323,12 @@
 
 									<div class="clear"></div>
 
+									<div class="col_full">
+										<label for="template-contactform-message">Message <small>*</small></label>
+										<textarea class="required sm-form-control" id="template-contactform-message"
+											name="template-contactform-message" rows="6" cols="30"></textarea>
+									</div>
+
 									<div class="col_full hidden">
 										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
 											class="sm-form-control" />
@@ -330,7 +336,7 @@
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
-											name="template-contactform-submit" value="submit">Activate Alerts</button>
+											name="template-contactform-submit" value="submit">Send Message</button>
 									</div>
 
 									<input type="hidden" name="prefix" value="template-contactform-">
