--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -275,7 +275,7 @@
 					
 					<!-- Contact Form
 					============================================= -->
-					<div class="col_half">
+					<div>
 
 						<div class="fancy-title title-dotted-border">
 							<h3>Send New Listing Email Alert</h3>
@@ -323,12 +323,6 @@
 
 									<div class="clear"></div>
 
-									<div class="col_full">
-										<label for="template-contactform-message">Message <small>*</small></label>
-										<textarea class="required sm-form-control" id="template-contactform-message"
-											name="template-contactform-message" rows="6" cols="30"></textarea>
-									</div>
-
 									<div class="col_full hidden">
 										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
 											class="sm-form-control" />
@@ -336,7 +330,7 @@
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
-											name="template-contactform-submit" value="submit">Send Message</button>
+											name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
 									</div>
 
 									<input type="hidden" name="prefix" value="template-contactform-">
