--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -293,7 +293,7 @@
 								<div class="col_one_third">
 									<label for="template-contactform-name">Name <small>*</small></label>
 									<input type="text" id="template-contactform-name" name="template-contactform-name" value=""
-										class="sm-form-control required" />
+										class="required sm-form-control" />
 								</div>
 
 								<div class="col_one_third">
@@ -305,7 +305,7 @@
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
 									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value=""
-										class="sm-form-control" />
+										class="required sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
@@ -319,16 +319,20 @@
 								<div class="col_one_third col_last">
 									<label for="template-contactform-employee">Employee ID</label>
 									<input type="text" id="template-contactform-employee" name="template-contactform-employee" value=""
-										class="sm-form-control" />
+										class="required sm-form-control" />
 
 									<div class="clear"></div>
 
 									<div class="col_full hidden">
 										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
-											class="sm-form-control" />
+											class="required sm-form-control" />
 									</div>
 									
 									<div class="clear"></div>
+									
+									<br>
+									<br>
+									<br>
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
