--- a/templates/contact.html
+++ b/templates/contact.html
@@ -109,15 +109,13 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="search"><div>County</div></a></li>
-							<li><a href="alerts"><div>Alerts</div></a></li>
-							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="search"><div>Search</div></a></li>
+							<li><a href="#"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="neighborhood"><div>Neighborhood</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
-							<li><a href="#"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
@@ -234,7 +232,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Listing &nbsp;Search </a>
+								style="z-index: 8; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cube" style="font-size:17px;margin-right:5px;"></i> Contact &nbsp;Us </a>
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
@@ -274,83 +272,85 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-
-					<!-- Postcontent
+					
+					<!-- Contact Form
 					============================================= -->
-					<div class="postcontent nobottommargin">
+					<div>
 
-						<h3>Contact Us</h3>
+						<div class="fancy-title title-dotted-border">
+							<h3>New Listing Email Alerts</h3>
+						</div>
 
 						<div class="form-widget">
 
 							<div class="form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform"
+								action="include/form.php" method="post">
 
 								<div class="form-process"></div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-name">Name <small>*</small></label>
-									<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
+									<input type="text" id="template-contactform-name" name="template-contactform-name" value=""
+										class="required sm-form-control" />
 								</div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-email">Email <small>*</small></label>
-									<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
+									<input type="email" id="template-contactform-email" name="template-contactform-email" value=""
+										class="required email sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
+									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value=""
+										class="required sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
 
 								<div class="col_two_third">
 									<label for="template-contactform-subject">Subject <small>*</small></label>
-									<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control" />
+									<input type="text" id="template-contactform-subject" name="subject" value=""
+										class="required sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
-									<label for="template-contactform-service">Services</label>
-									<select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
-										<option value="">-- Select One --</option>
-										<option value="Wordpress">Wordpress</option>
-										<option value="PHP / MySQL">PHP / MySQL</option>
-										<option value="HTML5 / CSS3">HTML5 / CSS3</option>
-										<option value="Graphic Design">Graphic Design</option>
-									</select>
-								</div>
+									<label for="template-contactform-employee">Employee ID</label>
+									<input type="text" id="template-contactform-employee" name="template-contactform-employee" value=""
+										class="required sm-form-control" />
 
-								<div class="clear"></div>
+									<div class="clear"></div>
 
-								<div class="col_full">
-									<label for="template-contactform-message">Message <small>*</small></label>
-									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
-								</div>
+									<div class="col_full hidden">
+										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
+											class="required sm-form-control" />
+									</div>
+									
+									<div class="clear"></div>
+									
+									<br>
+									<br>
 
-								<div class="col_full hidden">
-									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
-								</div>
+									<div class="col_full">
+										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
+											name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
+									</div>
 
-								<div class="col_full">
-									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
-								</div>
-
-								<input type="hidden" name="prefix" value="template-contactform-">
+									<input type="hidden" name="prefix" value="template-contactform-">
 
 							</form>
-							
+
 						</div>
 
-					</div><!-- .postcontent end -->
+					</div><!-- Contact Form End -->
 
 				</div>
 
 			</div>
 
 		</section><!-- #content end -->
-
 
 		<!-- Footer
 		============================================= -->
