--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Alert System</title>
+	<title>Contact Us</title>
 
 	<style>
 
@@ -278,7 +278,7 @@
 					<div>
 
 						<div class="fancy-title title-dotted-border">
-							<h3>New Listing Email Alerts</h3>
+							<h3>Contact Us</h3>
 						</div>
 
 						<div class="form-widget">
@@ -323,19 +323,22 @@
 
 									<div class="clear"></div>
 
-									<div class="col_full hidden">
-										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
-											class="required sm-form-control" />
-									</div>
-									
-									<div class="clear"></div>
+									<div class="col_full">
+								<label for="template-contactform-message">Message <small>*</small></label>
+								<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
+							</div>
+
+							<div class="col_full hidden">
+								<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
+							</div>
+
 									
 									<br>
 									<br>
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
-											name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
+											name="template-contactform-submit" value="submit">Send &nbsp;Message</button>
 									</div>
 
 									<input type="hidden" name="prefix" value="template-contactform-">
