--- a/templates/contact.html
+++ b/templates/contact.html
@@ -110,7 +110,7 @@
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
 							<li><a href="search"><div>Search</div></a></li>
-							<li><a href="#"><div>Alerts</div></a></li>
+							<li><a href="alerts"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
@@ -272,85 +272,189 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					
-					<!-- Contact Form
-					============================================= -->
-					<div>
 
-						<div class="fancy-title title-dotted-border">
-							<h3>Contact Us</h3>
-						</div>
+					<!-- Post Content
+					============================================= -->
+					<div class="postcontent nobottommargin">
+
+						<!-- Google Map
+						============================================= -->
+						<section id="google-map" class="gmap bottommargin" style="height: 300px;"></section>
+
+
+						<!-- Contact Form
+						============================================= -->
+						<h3>Send us an Email</h3>
 
 						<div class="form-widget">
 
 							<div class="form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform"
-								action="include/form.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
 
 								<div class="form-process"></div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-name">Name <small>*</small></label>
-									<input type="text" id="template-contactform-name" name="template-contactform-name" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
 								</div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-email">Email <small>*</small></label>
-									<input type="email" id="template-contactform-email" name="template-contactform-email" value=""
-										class="required email sm-form-control" />
+									<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
 
 								<div class="col_two_third">
 									<label for="template-contactform-subject">Subject <small>*</small></label>
-									<input type="text" id="template-contactform-subject" name="subject" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
-									<label for="template-contactform-employee">Department</label>
-									<input type="text" id="template-contactform-department" name="template-contactform-department" value=""
-										class="required sm-form-control" />
+									<label for="template-contactform-service">Services</label>
+									<select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
+										<option value="">-- Select One --</option>
+										<option value="Wordpress">Wordpress</option>
+										<option value="PHP / MySQL">PHP / MySQL</option>
+										<option value="HTML5 / CSS3">HTML5 / CSS3</option>
+										<option value="Graphic Design">Graphic Design</option>
+									</select>
+								</div>
 
-									<div class="clear"></div>
+								<div class="clear"></div>
 
-									<div class="col_full">
-								<label for="template-contactform-message">Message <small>*</small></label>
-								<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
-							</div>
+								<div class="col_full">
+									<label for="template-contactform-message">Message <small>*</small></label>
+									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
+								</div>
 
-							<div class="col_full hidden">
-								<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
-							</div>
+								<div class="col_full hidden">
+									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
+								</div>
 
+								<div class="col_full">
+									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
+								</div>
 
-									<div class="col_full">
-										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
-											name="template-contactform-submit" value="submit">Send &nbsp;Message</button>
-									</div>
-
-									<input type="hidden" name="prefix" value="template-contactform-">
+								<input type="hidden" name="prefix" value="template-contactform-">
 
 							</form>
+						</div>
+
+
+						<div class="line"></div>
+
+						<div class="col_two_third nobottommargin">
+
+							<!-- Testimonials
+							============================================= -->
+							<div class="fslider customjs testimonial twitter-scroll twitter-feed" data-username="envato" data-count="3" data-animation="slide" data-arrows="false">
+								<i class="i-plain i-large color icon-twitter nobottommargin" style="margin-right: 20px;"></i>
+								<div class="flexslider" style="width: auto;">
+									<div class="slider-wrap">
+										<div class="slide"></div>
+									</div>
+								</div>
+							</div>
 
 						</div>
 
-					</div><!-- Contact Form End -->
+						<!-- Contact Info
+						============================================= -->
+						<div class="col_one_third col_last nobottommargin">
+							<address>
+								<strong>Headquarters:</strong><br>
+								795 Folsom Ave, Suite 600<br>
+								San Francisco, CA 94107<br>
+							</address>
+							<abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
+							<abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
+							<abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+						</div><!-- Contact Info End -->
+
+					</div><!-- .postcontent end -->
+
+					<!-- Sidebar
+					============================================= -->
+					<div class="sidebar nobottommargin col_last clearfix">
+						<div class="sidebar-widgets-wrap">
+
+							<div class="widget widget_links clearfix">
+
+								<h4>Shortcodes</h4>
+								<ul>
+									<li><a href="animations.html"><div>Animations</div></a></li>
+									<li><a href="buttons.html"><div>Buttons</div></a></li>
+									<li><a href="carousel.html"><div>Carousel</div></a></li>
+									<li><a href="charts.html"><div>Charts</div></a></li>
+									<li><a href="clients.html"><div>Clients</div></a></li>
+									<li><a href="columns-grids.html"><div>Columns</div></a></li>
+									<li><a href="counters.html"><div>Counters</div></a></li>
+									<li><a href="dividers.html"><div>Dividers</div></a></li>
+									<li><a href="featured-boxes.html"><div>Icon Boxes</div></a></li>
+									<li><a href="gallery.html"><div>Galleries</div></a></li>
+									<li><a href="headings-dropcaps.html"><div>Heading Styles</div></a></li>
+									<li><a href="icon-lists.html"><div>Icon Lists</div></a></li>
+									<li><a href="labels-badges.html"><div>Labels</div></a></li>
+									<li><a href="lightbox.html"><div>Lightbox</div></a></li>
+									<li><a href="lists-cards.html"><div>Lists &amp; Cards</div></a></li>
+									<li><a href="maps.html"><div>Maps</div></a></li>
+									<li><a href="media-embeds.html"><div>Media Embeds</div></a></li>
+									<li><a href="modal-popovers.html"><div>Modal Boxes</div></a></li>
+									<li><a href="navigation.html"><div>Navigations</div></a></li>
+									<li><a href="pagination-progress.html"><div>Pagination</div></a></li>
+									<li><a href="pie-skills.html"><div>Pies &amp; Skills</div></a></li>
+									<li><a href="pricing.html"><div>Pricing Boxes</div></a></li>
+									<li><a href="process-steps.html"><div>Process Steps</div></a></li>
+									<li><a href="promo-boxes.html"><div>Promo Boxes</div></a></li>
+									<li><a href="quotes-blockquotes.html"><div>Blockquotes</div></a></li>
+									<li><a href="responsive.html"><div>Responsive</div></a></li>
+									<li><a href="sections.html"><div>Sections</div></a></li>
+									<li><a href="social-icons.html"><div>Social Icons</div></a></li>
+									<li><a href="style-boxes.html"><div>Alert Boxes</div></a></li>
+									<li><a href="styled-icons.html"><div>Styled Icons</div></a></li>
+									<li><a href="tables.html"><div>Tables</div></a></li>
+									<li><a href="tabs.html"><div>Tabs</div></a></li>
+									<li><a href="testimonials-twitter.html"><div>Testimonials</div></a></li>
+									<li><a href="thumbnails-slider.html"><div>Thumbnails</div></a></li>
+									<li><a href="toggles-accordions.html"><div>Toggles</div></a></li>
+								</ul>
+
+							</div>
+
+							<div class="widget clearfix">
+
+								<h4>Dribbble Shots</h4>
+								<div id="dribbble-widget" class="dribbble-shots masonry-thumbs" data-user="envato" data-count="16" data-type="user"></div>
+
+							</div>
+
+							<div class="widget widget-twitter-feed clearfix">
+
+								<h4>Twitter Feed</h4>
+								<ul class="iconlist twitter-feed" data-username="envato" data-count="2">
+									<li></li>
+								</ul>
+
+								<a href="#" class="btn btn-secondary btn-sm fright">Follow Us on Twitter</a>
+
+							</div>
+
+						</div>
+					</div><!-- .sidebar end -->
 
 				</div>
 
 			</div>
 
 		</section><!-- #content end -->
+
 
 		<!-- Footer
 		============================================= -->
